# prueba-tecnica-LS

./: .env  GUIA DE USARIO.docx  README.md  docker-compose.yml  stack de teclonogia.txt
backend/letter_soup/: Dockerfile  main.py  pyproject.toml
backend/letter_soup/src/DB/: app.py
backend/letter_soup/src/Utils/: app.py
backend/letter_soup/src/api/: app.py
backend/letter_soup/src/api/routes/: app_routes.py
backend/letter_soup/src/app/: app.py
backend/letter_soup/src/core/: config.py
backend/letter_soup/src/crud/: app.py
backend/letter_soup/src/models/: model.py
client/letter_soup/: .env  Dockerfile  package-lock.json  package.json  rsbuild.config.mjs  webpack.config.js
client/letter_soup/src/: App.jsx  config.js
client/letter_soup/src/api/: api.js
client/letter_soup/src/components/: Header.jsx  LayoutContainer.jsx  LetterSoupForm.jsx  LetterSoupTable.jsx  LetterTable.jsx  WordsList.jsx
client/letter_soup/src/hooks/: useLetterSoup.js
client/letter_soup/src/pages/: MainLayout.jsx
client/letter_soup/src/utils/: parser.js
